fix: Fix font-size in Not Responsive

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,4 +1,7 @@
 .main {
+    // Until it is responsive
+    padding: 5rem !important;
+
     h1 {
         display: none;
         text-align: center;
